# NavigAItor

./: .gitignore  compose.yml  package-lock.json  package.json  pyproject.toml  run_server.sh
app/: layout.jsx
backend/: Dockerfile  dbinit.py  env.yml  main.py  pyproject.toml  requirements.txt  run.sh  run_server.sh
backend/api/: __init__.py  deps.py
backend/api/endpoints/: auth.py  chat.py  conversations.py  documents.py  files.py  users.py
backend/core/: auth.py  chat.py  config.py  crud.py  db.py  logging.py
backend/schema/: auth.py  base.py  chat.py  conversations.py  documents.py  files.py  users.py
backend/services/: api.py  config.py  docstore.py  fs.py  main.py  mongo.py  utils.py
backend/services/modal/: api.py  utils.py
config/: site.js
frontend/: Dockerfile  bun.lockb  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/server/: client-reference-manifest.js  middleware-build-manifest.js  (+7 more)
frontend/app/: layout.jsx  page.jsx
frontend/components/: tailwind-indicators.jsx
frontend/config/: site.js
frontend/public/: config.js.template
frontend/src/: App.tsx  index.css  vite-env.d.ts
notebooks/: 8k ingestion.ipynb  slide ingestion.ipynb  unstructured-bricks.ipynb  unstructured-parser.ipynb
scripts/: generate_token.sh  run_server.sh
(+130 files in other folders)
