[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend API for llminate"
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
