[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
huggingface-hub = "^0.20.2"
transformers = "^4.36.2"
pydantic = "^2.6.0"
modal = "^0.56.4844"
loguru = "^0.7.2"
torch = "^2.1.2"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
